@@ -13,3 +13,6 @@ Disassembly of section .text:
 0[0-9a-f]+ <[^>]+> bf40      	sev
 0[0-9a-f]+ <[^>]+> 4408      	add	r0, r1
 0[0-9a-f]+ <[^>]+> 46c0      	nop.*
+0[0-9a-f]+ <[^>]+> f3bf 8f5f 	dmb	sy
+0[0-9a-f]+ <[^>]+> f3bf 8f4f 	dsb	sy
+0[0-9a-f]+ <[^>]+> f3bf 8f6f 	isb	sy
