@@ -14,3 +14,7 @@ foo:
 	sev
 	add r0, r0, r1
 	nop
+	dmb
+	dsb
+	isb
+	
